Mail: several search terms, bigger pages, and messages read in one batch
The agent likes to write its search as "Rabatt OR Newsletter". IMAP and
Graph search for that literally and find nothing. mail_list now splits the
line at OR and | into up to six terms, searches each on its own and merges
the hits; the result names the total and the next offset, so the agent pages
on by itself instead of asking. A page may hold up to 200 rows, above 50
without the preview text.

MailStore can read a list of messages at once; IMAP opens one connection
for the lot instead of one per message. Twenty messages for the found list:
15.1 s -> 8.8 s.

And Map.copyOf had shuffled the order of the providers - the mailboxes would
have appeared in a changing order.