@@ -43,7 +43,9 @@ public class MailAccounts {
                 known.putIfAbsent(provider.provider(), provider);
             }
         }
-        this.providers = Map.copyOf(known);
+        // The order they were registered in is the order a user's accounts are
+        // listed in; Map.copyOf would shuffle it.
+        this.providers = java.util.Collections.unmodifiableMap(known);
     }
 
     /** The provider names that are mailboxes here — what {@link #of} looks for. */
